--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -523,7 +523,7 @@ eng:
     diff_more: "Diff more"
     direct_links: "Direct links"
     direction: "Direction"
-    direction_label: "Direction label"
+    direction_label: "Direction label" #?
     disease: "Disease"
     diseases: "Diseases"
     district: "District"
@@ -732,7 +732,7 @@ eng:
     # name_aee: "Name aee"
     nature: "Nature"
     nature_code: "Type code"
-    nature_label: "Type label"
+    nature_label: "Type label" #?
     net_weight: "Net weight (kg)"
     nic: "Nic"
     node: "Node"
@@ -796,7 +796,7 @@ eng:
     per_duration_time_unit: "Per duration time unit"
     per_frequency_time_unit: "Per frequency time unit"
     period: "Period"
-    period_name: "Period name"
+    period_name: "Period name" #?
     phone: "Phone" #?
     # phones: "Phones"
     photo: "Photo"
@@ -970,7 +970,7 @@ eng:
     taxes: "Taxes"
     temperature: "Temperature"
     template: "Template"
-    text_importance: "Text importance"
+    text_importance: "Text importance" #?
     text_nature: "Text type" #?
     theoric_quantity: "Theoric quantity"
     title: "Title"
@@ -1017,6 +1017,7 @@ eng:
     usage_duration: "Usage duration"
     use_range: "Use range" #?
     used_amount: "Used amount"
+    used_with: "Used with"
     useful_lines: "Useful lines"
     user: "User"
     user_name: "User name"
@@ -1117,14 +1118,6 @@ eng:
       sales: "sales"
     contact: #?
       error_modify_contact: "The contact can not be updated."
-    custom_field:
-      natures:
-        boolean: "Check box"
-        choice: "Choice list"
-        date: "Date"
-        datetime: "Date and time"
-        decimal: "Decimal"
-        string: "Text"
     delay:
       error_unvalid_format_for_expression: "Unvalid format for expression"
     deposit:
@@ -1171,14 +1164,9 @@ eng:
       unvalid_nature: "Unvalid type of document template."
     entity:
       client: "Client"
+      no_right_defined_for_this_part_of_the_application: "No right defined for this part of the application: %{controller}%{action}"
+      no_right_defined_for_this_part_of_the_application_and_this_user: "You can not access to this page"
       supplier: "Supplier"
-    event_nature:
-      usages:
-        mailing: "Mailing"
-        manual: "Manual"
-        purchase: "Creation of a purchase"
-        sale: "Creation of a sale"
-        sales_invoice: "Creation of a sales invoice"
     financial_year:
       bookkeep: "[%{resource} %{number}] Depreciation of %{name} (%{position}/%{total})"
       code:
@@ -1234,16 +1222,8 @@ eng:
         with_value: "%{comparator} %{value}"
         without_value: "%{comparator}"
       reflections: "Associated tables"
-    observation:
-      importances:
-        important: "Important"
-        normal: "Normal"
-        notice: "Notice"
     operation_line:
       density_label: "%{value} %{product_unit}/%{area_unit}"
-      direction_label:
-        in: "In"
-        out: "Out"
     outgoing_delivery:
       label: "%{client} at %{address}"
       sale: "Sale %{number}"
@@ -1267,9 +1247,6 @@ eng:
       subscription_label:
         period: "Subscription %{subscription_nature} for %{entity} at %{address} from %{start} to %{finish}"
         quantity: "Subscription %{subscription_nature} for %{entity} at %{address} from %{start} to %{finish}"
-      supply_methods:
-        buy: "Buy"
-        produce: "Produce"
       to:
         produce: "Production"
         purchases: "Purchases"
@@ -1277,10 +1254,6 @@ eng:
         sales: "Sales"
     product_component:
       of_product: "of product"
-    production_chain_work_center:
-      natures:
-        input: "One in, many out"
-        output: "Many in, one out"
     purchase:
       bookkeep: "[%{resource} %{number}] %{products} of %{supplier}"
       label: "%{supplier} at %{address}"
@@ -1305,10 +1278,6 @@ eng:
         invoice: "Sales invoice %{number}"
         order: "Sales order %{number}"
         refused: "Refused estimate %{number}"
-      natures:
-        estimate: "Estimate"
-        order: "Order"
-        sales_invoice: "Sales invoice"
       sale: "Sale %{number}"
       sales_conditions:
         downpayment: "A downpayment of %{percentage}% (i.e. %{amount}€) must be paid at the signature of this present estimate."
@@ -1334,62 +1303,43 @@ eng:
     sequence:
       default:
         assets:
-          name: "Numeration of assets"
           number_format: "A[number|7]"
         cash_transfers:
-          name: "Numeration of cash transfers"
           number_format: "CT[year|4][number|4]"
           period: "year"
         deposits:
-          name: "Numeration of deposits"
           number_format: "B[year|4][number|4]"
           period: "year"
         entities:
-          name: "Numeration of people"
           number_format: "[number|8]"
         incoming_deliveries:
-          name: "Numeration of incoming deliveries"
           number_format: "ID[year|4][number|4]"
           period: "year"
         incoming_payments:
-          name: "Numeration of payments"
           number_format: "P[year|4][number|6]"
           period: "year"
         outgoing_deliveries:
-          name: "Numeration of outgoing deliveries"
           number_format: "OD[year|4][number|6]"
           period: "year"
         outgoing_payments:
-          name: "Numeration of payments"
           number_format: "D[year|4][number|4]"
           period: "year"
         purchases:
-          name: "Numeration of purchases"
           number_format: "PO[year|4][month|2][number|4]"
           period: "month"
         sales:
-          name: "Numeration of sales"
           number_format: "SO[year|4][month|2][number|6]"
           period: "month"
         sales_invoices:
-          name: "Numeration of sales invoices"
           number_format: "F[year|4][number|6]"
           period: "year"
         stock_transfers:
-          name: "Numeration of stock transfers"
           number_format: "ST[year|4][number|4]"
           period: "year"
         subscriptions:
-          name: "Numeration of subscriptions"
           number_format: "SUB[number|8]"
         transports:
-          name: "Numeration of transports"
           number_format: "SH[number|8]"
-      periods:
-        cweek: "Commercial week"
-        month: "Month"
-        number: "No periodicity"
-        year: "Year"
     stock:
       default_name: "%{warehouse}/%{product}/%{tracking}"
       label:
@@ -1397,19 +1347,6 @@ eng:
         without_tracking: "%{warehouse}: No serial, %{quantity}%{unit} available"
     stock_move:
       default_name: "%{origin} (%{code})"
-    stock_transfer:
-      natures:
-        gain: "Gain"
-        transfer: "Transfer"
-        waste: "Loss"
-    subscription_nature:
-      natures:
-        period: "Subscription by date"
-        quantity: "Subscription by number"
-    tax:
-      natures:
-        amount: "Amount"
-        percent: "Percentage"
     tax_declaration:
       deferment: "Deferment"
       monthly: "Monthly"
@@ -1419,11 +1356,6 @@ eng:
       quarterly: "Quarterly"
       simplified: "Simplified real"
       yearly: "Yearly"
-    tool:
-      natures:
-        other: "Other"
-        towed: "Towed"
-        tractor: "Tractor"
     unit:
       default:
         a: "Are"
@@ -1435,11 +1367,8 @@ eng:
         l: "Litre"
         m: "Metre"
         m3: "Cubic metre"
-        t: "Tonne"
+        t: "Ton"
         u: "Unit"
-    user: #?
-      no_right_defined_for_this_part_of_the_application: "No right defined for this part of the application: %{controller}%{action}" #?
-      no_right_defined_for_this_part_of_the_application_and_this_user: "You can not access to this page"
   enumerize:
     asset:
       depreciation_method:
@@ -1453,6 +1382,14 @@ eng:
       nature:
         bank_account: "Bank account"
         cash_box: "Cash box"
+    custom_field:
+      nature:
+        boolean: "Check box"
+        choice: "Choice list"
+        date: "Date"
+        datetime: "Date and time"
+        decimal: "Decimal"
+        string: "Text"
     document_template:
       family:
         accountancy: "Accountancy"
@@ -1479,6 +1416,12 @@ eng:
         sales_order: "Sales order"
         stocks: "Stocks"
         transport: "Transport"
+    event_nature:
+      usage:
+        manual: "Manual"
+        purchase: "Creation of a purchase"
+        sale: "Creation of a sale"
+        sales_invoice: "Creation of a sales invoice"
     journal:
       nature:
         bank: "Bank"
@@ -1487,12 +1430,59 @@ eng:
         purchases: "Purchases"
         sales: "Sales"
         various: "Various operations"
+    observation:
+      importance:
+        important: "Important"
+        normal: "Normal"
+        notice: "Notice"
+    operation_line:
+      direction:
+        in: "In"
+        out: "Out"
     product:
       nature:
         product: "Product"
         service: "Service"
         subscription: "Subcription"
         transfer: "Transfer"
+    production_chain_work_center:
+      nature:
+        input: "One in, many out"
+        output: "Many in, one out"
+    sequence:
+      period:
+        cweek: "Commercial week"
+        month: "Month"
+        number: "No periodicity"
+        year: "Year"
+      usage:
+        assets: "Numeration of assets"
+        cash_transfers: "Numeration of cash transfers"
+        deposits: "Numeration of deposits"
+        entities: "Numeration of people"
+        incoming_deliveries: "Numeration of incoming deliveries"
+        incoming_payments: "Numeration of payments"
+        outgoing_deliveries: "Numeration of outgoing deliveries"
+        outgoing_payments: "Numeration of payments"
+        purchases: "Numeration of purchases"
+        sales: "Numeration of sales"
+        sales_invoices: "Numeration of sales invoices"
+        stock_transfers: "Numeration of stock transfers"
+        subscriptions: "Numeration of subscriptions"
+        transports: "Numeration of transports"
     sex:
       female: "Female"
       male: "Male"
+    stock_transfer:
+      nature:
+        gain: "Gain"
+        transfer: "Transfer"
+        waste: "Loss"
+    subscription_nature:
+      nature:
+        period: "Subscription by date"
+        quantity: "Subscription by number"
+    tax:
+      nature:
+        amount: "Amount"
+        percentage: "Percentage"
