complete missing transmation in Relationship (eng / fra)

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -128,7 +128,7 @@ fra:
       # settings_production: "Production settings dashboard"
       # settings_products: "Products settings dashboard"
       # settings_purchases: "Purchases settings dashboard"
-      # settings_relationship: "Relationship settings dashboard"
+      settings_relationship: "Configuration des Tiers"
       # settings_sales: "Sales settings dashboard"
       # settings_stocks: "Stocks settings dashboard"
       stocks: "Tableau de bord des stocks"
@@ -651,11 +651,17 @@ fra:
     add_condition: "Ajouter la condition"
     add_conditions: "Ajoutez des conditions"
     add_delivery: "Ajouter une livraison"
-    add_diagnostic: "Ajouter un diagnostic" #?
+    add_email: "Ajouter un email"
+    add_fax: "Ajouter un fax"
+    add_diagnostic: "Ajouter un diagnostic"
+    add_mail: "Ajouter une adresse postale"
+    add_mobile: "Ajouter un n° de portable"
     add_payment: "Ajouter un encaissement"
+    add_phone: "Ajouter un n° de telephone"
     add_quickly_a_line: "Ajouter rapidement une ligne de produit"
     add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
-    add_treatment: "Ajouter un traitement" #?
+    add_treatment: "Ajouter un traitement"
+    add_website: "Ajouter un site Web"
     address: "Adresse"
     all: "Tous"
     all_accounts: "Tous les comptes"
@@ -1109,6 +1115,7 @@ fra:
       success: "Opération réalisée avec succès"
       warning: "Attention!"
     number: "Numéro"
+    number_options: "Options de numérotations"
     on_account: "À remettre sur le compte"
     one_condition: "au moins une condition"
     operation_lines: "Intrants et sortants"
