Cleans nested fields and fixes missing errors on selector in forms

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -650,9 +650,17 @@ arb:
     add_condition: "اضافة شرط"
     add_conditions: "اضف شروط"
     add_delivery: "اضافة وسيلة نقل"
+    # add_diagnostic: "Add diagnostic"
+    # add_email: "Add email"
+    # add_fax: "Add fax"
+    # add_mail: "Add postal adress"
+    # add_mobile: "Add mobile phone number"
     add_payment: "اضافة دفعة"
+    # add_phone: "Add phone number"
     # add_quickly_a_line: "Add quickly a line of product"
     # add_subscription_for_sale_line: "Add subscription for sale line #%{position}"
+    # add_treatment: "Add treatment"
+    # add_website: "Add website"
     address: "العنوان"
     all: "جميع الاسعار"
     # all_accounts: "All accounts"
@@ -1143,6 +1151,7 @@ arb:
       success: "استكملت العملية بنجاح"
       warning: "!تحذير"
     number: "رقم"
+    # number_options: "Options Numbers"
     observation_create: "اضافة ملاحظة" #?
     on_account: "أ€ يضع على الحساب"
     one_condition: "ما لا يقل عن شرط واحد"
