--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -635,9 +635,17 @@ spa:
     # add_condition: "Add condition"
     # add_conditions: "Add conditions"
     # add_delivery: "Add delivery"
+    # add_diagnostic: "Add diagnostic"
+    # add_email: "Add email"
+    # add_fax: "Add fax"
+    # add_mail: "Add postal adress"
+    # add_mobile: "Add mobile phone number"
     # add_payment: "Add payment"
+    # add_phone: "Add phone number"
     # add_quickly_a_line: "Add quickly a line of product"
     # add_subscription_for_sale_line: "Add subscription for sale line #%{position}"
+    # add_treatment: "Add treatment"
+    # add_website: "Add website"
     # address: "Address"
     # all: "All"
     # all_accounts: "All accounts"
@@ -1075,6 +1083,7 @@ spa:
       # success: "Success"
       # warning: "Warning!"
     # number: "Number"
+    # number_options: "Options Numbers"
     on_account: "Volver a poner sobre la cuenta"
     # one_condition: "One condition"
     # operation_lines: "Incoming and outgoing products"
