--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -730,12 +730,12 @@ arb:
     add_conditions: "اضف شروط"
     add_delivery: "اضافة وسيلة نقل"
     # add_diagnostic: "Ajouter un diagnostic"
-    # add_email: "Ajouter un email"
-    # add_fax: "Ajouter un fax"
+    # add_email: "Ajouter une adresse e-mail"
+    # add_fax: "Ajouter un n° de fax"
     # add_mail: "Ajouter une adresse postale"
     # add_mobile: "Ajouter un n° de portable"
     add_payment: "اضافة دفعة"
-    # add_phone: "Ajouter un n° de telephone"
+    # add_phone: "Ajouter un n° de téléphone"
     # add_quickly_a_line: "Ajouter rapidement une ligne de produit"
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
     # add_treatment: "Ajouter un traitement"
