--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -719,12 +719,12 @@ spa:
     # add_conditions: "Ajoutez des conditions"
     # add_delivery: "Ajouter une livraison"
     # add_diagnostic: "Ajouter un diagnostic"
-    # add_email: "Ajouter un email"
-    # add_fax: "Ajouter un fax"
+    # add_email: "Ajouter une adresse e-mail"
+    # add_fax: "Ajouter un n° de fax"
     # add_mail: "Ajouter une adresse postale"
     # add_mobile: "Ajouter un n° de portable"
     # add_payment: "Ajouter un encaissement"
-    # add_phone: "Ajouter un n° de telephone"
+    # add_phone: "Ajouter un n° de téléphone"
     # add_quickly_a_line: "Ajouter rapidement une ligne de produit"
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
     # add_treatment: "Ajouter un traitement"
@@ -835,7 +835,7 @@ spa:
     # contact: "à l’adresse"
     # contains: "Contient"
     # contextual_help: "Aide contextuelle"
-    # coordinates: "Coordonnées de l’abonnement"
+    # coordinates: "Coordonnées"
     # copy_of: "Copie de %{source}"
     cost_income_statement: "Cargas"
     cost_sum: "Total cargas de explotación"
